--- a/style/style.css
+++ b/style/style.css
@@ -60,6 +60,7 @@ header p {
 }
 
 nav{
+    margin-top: auto;
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.389);
