--- a/style/style.css
+++ b/style/style.css
@@ -42,20 +42,20 @@ header{
 header h1{
     color: white;
     font-family: var(--font-destaque);
-    margin-bottom: 20px;
     font-size: 3em;
+    font-weight: normal;
+    margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.523);
 }
 header p {
     color: white;
     font-family: var(--font-padrao);
     font-size: 1.2em;
-    margin: auto;
-    margin-bottom: 20px;
     max-width: 600px;
-    max-height: 10px;
     padding-right: 10px;
     padding-left: 10px;
+    margin: auto;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.523);
 }
 
